--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,204 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/icons/favicon.svg"
+      type="image/x-icon">
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="top-bar header__top-bar">
+        <a href="#" class="top-bar__logo"></a>
+        <div class="icons top-bar__icons">
+          <a href="#menu" class="icons icons--burger-menu"></a>
+          <div class="nav top-bar__nav">
+            <a class="nav__link nav__link--black" href="#main">Products</a>
+            <a class="nav__link nav__link--black" href="#about-us">About Us</a>
+            <a class="nav__link nav__link--black" href="#blog">Blog</a>
+            <div class="red-link header__red-link">
+              <a class="red-link__tel" href="tel:6295550129; 6035550123; 7045550127"></a>
+              <a class="red-link__contact" href="#contact-us">contact us</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="header__content">
+        <p class="text header__text">We bake your fantasies - croissants, cakes, cookies, and cupcakes.</p>
+        <h1 class="header__title">Creative Bakery</h1>
+        <div class="header__img"></div>
+        <a class="button header__button" href="#">
+          <div class="button__img"></div>
+          <div class="button__text">learn more</div>
+        </a>
+      </div>
+    </header>
+
+    <aside class="menu" id="menu">
+      <div class="menu__wrapper">
+        <div class="top-bar menu__top-bar">
+          <a href="#" class="top-bar__logo"></a>
+          <div class="icons menu__icons">
+            <a href="#" class="icons icons--close"></a>
+          </div>
+        </div>
+        <div class="menu__content">
+          <div class="nav menu__nav">
+            <a class="nav__link nav__link--black" href="#products">Products</a>
+            <a class="nav__link nav__link--black" href="#about-us">About Us</a>
+            <a class="nav__link nav__link--black" href="#blog">Blog</a>
+            <div class="red-link header__red-link">
+              <a class="red-link__tel" href="tel:6295550129; 6035550123; 7045550127"></a>
+              <a class="red-link__contact" href="#contact-us">contact us</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main" id="main">
+      <h2 class="h2-title main__h2-title">What we bake</h2>
+      <p class="text main__text">We can customise our cookies right for your needs. Just imagine it.</p>
+
+      <article class="article main__article">
+        <div class="article__content article__content--cakes1">
+          <div class="article__img article__img--cakes1"></div>
+          <p class="article__title">Cakes</p>
+          <p class="text article__text">Oatmeal cookies with golden raisins, orange zest and chocolate chips</p>
+          <div class="article__link">
+            <a class="article__item article__item--arrow" href="#">&#8594</a>
+            <a class="article__item article__item--order" href="#">order</a>
+          </div>
+        </div>
+
+        <div class="article__content article__content--cakes2">
+          <div class="article__img article__img--cakes2"></div>
+          <p class="article__title">Cakes</p>
+          <p class="text article__text">Chocolate biscuit coffee cake topped with a buttercream and powder</p>
+          <div class="article__link">
+            <a class="article__item article__item--arrow" href="#">&#8594</a>
+            <a class="article__item article__item--order" href="#">order</a>
+          </div>
+        </div>
+
+        <div class="article__content article__content--donuts1">
+          <div class="article__img article__img--donuts1"></div>
+          <p class="article__title">Donuts</p>
+          <p class="text article__text">Light multi-layered croissant strewn with cinammon and almond "petals"</p>
+          <div class="article__link">
+            <a class="article__item article__item--arrow" href="#">&#8594</a>
+            <a class="article__item article__item--order" href="#">order</a>
+          </div>
+        </div>
+
+        <div class="article__content article__content--donuts2">
+          <div class="article__img article__img--donuts2"></div>
+          <p class="article__title">Donuts</p>
+          <p class="text article__text">Light multi-layered croissant strewn with coconut and nuts</p>
+          <div class="article__link">
+            <a class="article__item article__item--arrow" href="#">&#8594</a>
+            <a class="article__item article__item--order" href="#">order</a>
+          </div>
+        </div>
+
+        <div class="article__content article__content--cookies1">
+          <div class="article__img article__img--cookies1"></div>
+          <p class="article__title">Cakes</p>
+          <p class="text article__text">Chocolate salted caramel, Vanilla frutti pebbles</p>
+          <div class="article__link">
+            <a class="article__item article__item--arrow" href="#">&#8594</a>
+            <a class="article__item article__item--order" href="#">order</a>
+          </div>
+        </div>
+
+        <div class="article__content article__content--cookies2">
+          <div class="article__img article__img--cookies2"></div>
+          <p class="article__title">Cookies</p>
+          <p class="text article__text">Oatmeal cookies with golden raisins, orange zest and chocolate chips</p>
+          <div class="article__link">
+            <a class="article__item article__item--arrow" href="#">&#8594</a>
+            <a class="article__item article__item--order" href="#">order</a>
+          </div>
+        </div>
+      </article>
+
+      <section class="about-us" id="about-us">
+        <div class="about-us__bg"></div>
+        <h2 class="h2-title about-us__h2-title">Few words <br> about us</h2>
+        <p class="text about-us__text">Like many design teams, Onfido made the transition from Abstract + Sketch, to Figma
+          in the last couple of years. One of the common resistance points internally bevore making that switch, was Figma's
+          lack of Git-style branching that Abstract enabled. The design team had come to rely on branching and had built a lot
+          of our processes around it.
+        </p>
+        <div class="about-us__article about-us__article--year">
+          <p class="about-us__red">2015</p>
+          <p class="about-us__black">Foundation year</p>
+        </div>
+        <div class="about-us__article about-us__article--stores">
+          <p class="about-us__red">23</p>
+          <p class="about-us__black">Stores</p>
+        </div>
+        <div class="about-us__article about-us__article--companies">
+          <p class="about-us__red">155</p>
+          <p class="about-us__black">Companies</p>
+        </div>
+        <div class="about-us__article about-us__article--clients">
+          <p class="about-us__red">10K+</p>
+          <p class="about-us__black">Clients</p>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="footer__navigation">
+        <div class="footer__logo"></div>
+        <div class="nav footer__nav">
+          <p class="footer__title">Menu</p>
+          <a class="nav__link nav__link--white" href="#products">Products</a>
+          <a class="nav__link nav__link--white" href="#about-us">About Us</a>
+          <a class="nav__link nav__link--white" href="#blog">Blog</a>
+          <a class="nav__link nav__link--white" href="#blog">Terms & Privacy</a>
+        </div>
+      </div>
+
+      <div class="footer__contacts">
+        <h2 class="footer__h2-title">Contact us</h2>
+        <div class="footer__container">
+          <div class="footer__flex">
+            <p class="footer__title">Call us</p>
+            <a class="footer__tel" href="tel:6295550129">(629) 555-0129</a>
+            <a class="footer__tel" href="tel:6035550123">(603) 555-0123</a>
+            <a class="footer__tel" href="tel:7045550127">(704) 555-0127</a>
+          </div>
+          <div class="footer__mail">
+            <p class="footer__title">Email us</p>
+            <a class="footer__mail-link" href="mailto:bakerlab@example.com">bakerlab@example.com</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="socials footer__socials">
+        <div class="socials__list">
+          <a class="socials__icon socials__icon--facebook" href="https://www.facebook.com"
+            target="_blank">
+          </a>
+          <a class="socials__icon socials__icon--instagram" href="https://www.telegram.com"
+            target="_blank">
+          </a>
+          <a class="socials__icon socials__icon--twitter" href="https://www.x.com"
+            target="_blank">
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__info">&#169 Bakerlab 2022</div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
