--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,99 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
     <script src="scripts/main.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" >
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  </head>
+
+
+  <body class="page__body">
+    <header class="header">
+      <div class="top-bar">
+        <a href="#">
+          <img src="images/Logo.png" class="top-bar__logo"
+            alt="Creative Bakery logo">
+        </a>
+
+        <a href="#menu" class="icon icon--menu"></a>
+
+      </div>
+
+      <div class="header__bottom">
+        <h2 class="header__slogan">We bake your fantasies - croissants, cakes, cookies, and cupcakes.</h2>
+        <h1 class="header__title">Creative Bakery</h1>
+        <img class="header__picture" src="images/Cookie.png"
+          alt="Header picture">
+        <button class="header__button"></button>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <!-- <div class="menu__content"> -->
+      <div class="top-bar">
+          <a href="#">
+            <img src="images/Logo.png" class="top-bar__logo"
+              alt="Creative Bakery logo">
+          </a>
+
+          <a href="#" class="icon icon--close"></a>
+      </div>
+
+      <nav class="nav">
+        <ul class="nav__list nav__list--menu">
+          <li class="nav__item">
+            <a class="nav__link" href="#products">Products</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#about_us">About Us</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#blog">Blog</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#contact_us">Contact Us</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- </div> -->
+    </aside>
+
+    <main>
+      <section class="products" id="products">
+        <h1>
+          What we bake
+        </h1>
+      </section>
+
+      <section class="about_us" id="about_us">
+        <h1>
+          Few words about us222
+        </h1>
+      </section>
+
+      <section class="blog" id="blog">
+        <h1>
+        </h1>
+      </section>
+
+      <section class="contact_us" id="contact_us">
+        <h1>
+        </h1>
+      </section>
+    </main>
+
+    <footer>
+    </footer>
   </body>
 </html>
