--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en" class="page">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -12,57 +15,104 @@
       href="./styles/main.scss"
     />
     <script src="scripts/main.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" >
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-
 
   <body class="page__body">
     <header class="header">
       <div class="top-bar">
         <a href="#">
-          <img src="images/Logo.png" class="top-bar__logo"
-            alt="Creative Bakery logo">
+          <img
+            src="images/Logo.png"
+            class="top-bar__logo"
+            alt="Creative Bakery logo"
+          />
         </a>
 
-        <a href="#menu" class="icon icon--menu"></a>
-
+        <a
+          href="#menu"
+          class="icon icon--menu"
+        ></a>
       </div>
 
       <div class="header__bottom">
-        <h2 class="header__slogan">We bake your fantasies - croissants, cakes, cookies, and cupcakes.</h2>
+        <h2 class="header__slogan">
+          We bake your fantasies - croissants, cakes, cookies, and cupcakes.
+        </h2>
         <h1 class="header__title">Creative Bakery</h1>
-        <img class="header__picture" src="images/Cookie.png"
-          alt="Header picture">
+        <img
+          class="header__picture"
+          src="images/Cookie.png"
+          alt="Header picture"
+        />
         <button class="header__button"></button>
       </div>
     </header>
 
-    <aside class="page__menu menu" id="menu">
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
       <!-- <div class="menu__content"> -->
       <div class="top-bar">
-          <a href="#">
-            <img src="images/Logo.png" class="top-bar__logo"
-              alt="Creative Bakery logo">
-          </a>
+        <a href="#">
+          <img
+            src="images/Logo.png"
+            class="top-bar__logo"
+            alt="Creative Bakery logo"
+          />
+        </a>
 
-          <a href="#" class="icon icon--close"></a>
+        <a
+          href="#"
+          class="icon icon--close"
+        ></a>
       </div>
 
       <nav class="nav">
         <ul class="nav__list nav__list--menu">
           <li class="nav__item">
-            <a class="nav__link" href="#products">Products</a>
+            <a
+              class="nav__link"
+              href="#products"
+            >
+              Products
+            </a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#about_us">About Us</a>
+            <a
+              class="nav__link"
+              href="#about_us"
+            >
+              About Us
+            </a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#blog">Blog</a>
+            <a
+              class="nav__link"
+              href="#blog"
+            >
+              Blog
+            </a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#contact_us">Contact Us</a>
+            <a
+              class="nav__link"
+              href="#contact_us"
+            >
+              Contact Us
+            </a>
           </li>
         </ul>
       </nav>
@@ -70,30 +120,35 @@
     </aside>
 
     <main>
-      <section class="products" id="products">
-        <h1>
-          What we bake
-        </h1>
+      <section
+        class="products"
+        id="products"
+      >
+        <h1>What we bake</h1>
       </section>
 
-      <section class="about_us" id="about_us">
-        <h1>
-          Few words about us222
-        </h1>
+      <section
+        class="about_us"
+        id="about_us"
+      >
+        <h1>Few words about us222</h1>
       </section>
 
-      <section class="blog" id="blog">
-        <h1>
-        </h1>
+      <section
+        class="blog"
+        id="blog"
+      >
+        <h1></h1>
       </section>
 
-      <section class="contact_us" id="contact_us">
-        <h1>
-        </h1>
+      <section
+        class="contact_us"
+        id="contact_us"
+      >
+        <h1></h1>
       </section>
     </main>
 
-    <footer>
-    </footer>
+    <footer></footer>
   </body>
 </html>
