--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,22 @@
     <title>Bakerlab</title>
 
     <link
+      rel="icon"
+      type="image/png"
+      href="./public/favicon...png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./public/favicon...png"
+    />
+    <link
+      rel="shortcut icon"
+      href="./public/favicon...png"
+      type="image/png"
+    />
+
+    <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
     />
@@ -20,10 +36,12 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
     />
+
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+
     <script src="scripts/main.js"></script>
   </head>
   <body class="page__body">
@@ -429,10 +447,30 @@
 
           <div class="footer__part footer__menu__part">
             <div class="footer__pages">Menu</div>
-            <div class="footer__categories">Products</div>
-            <div class="footer__categories">About Us</div>
-            <div class="footer__categories">Blog</div>
-            <div class="footer__categories">Terms & Privacy</div>
+            <a
+              href="#products"
+              class="footer__categories"
+            >
+              Products
+            </a>
+            <a
+              href="#abouts"
+              class="footer__categories"
+            >
+              About Us
+            </a>
+            <a
+              href="#blog"
+              class="footer__categories"
+            >
+              Blog
+            </a>
+            <a
+              href="#terms"
+              class="footer__categories"
+            >
+              Terms & Privacy
+            </a>
           </div>
 
           <div class="footer__part footer__tittle__part">
@@ -441,33 +479,65 @@
 
           <div class="footer__part footer__call__part">
             <div class="footer__pages">Call Us</div>
-            <div class="footer__categories">(629) 555-0129</div>
-            <div class="footer__categories">(603) 555-0123</div>
-            <div class="footer__categories">(704) 555-0127</div>
+            <a
+              href="tel:+16295550129"
+              class="footer__categories"
+            >
+              (629) 555-0129
+            </a>
+            <a
+              href="tel:+16035550123"
+              class="footer__categories"
+            >
+              (603) 555-0123
+            </a>
+            <a
+              href="tel:+17045550127"
+              class="footer__categories"
+            >
+              (704) 555-0127
+            </a>
           </div>
 
           <div class="footer__part footer__email__part">
             <div class="footer__pages">Email Us</div>
-            <div class="footer__categories">bakerlab@example.com</div>
+            <a
+              href="mailto:bakerlab@example.com"
+              class="footer__categories"
+            >
+              bakerlab@example.com
+            </a>
           </div>
 
           <div class="footer__icons">
-            <div class="footer__icon_facebook"></div>
-            <div class="footer__icon_instagram"></div>
-            <div class="footer__icon_twitter"></div>
+            <a
+              href="https://facebook.com"
+              target="_blank"
+              class="footer__icon_facebook"
+            ></a>
+            <a
+              href="https://instagram.com"
+              target="_blank"
+              class="footer__icon_instagram"
+            ></a>
+            <a
+              href="https://twitter.com"
+              target="_blank"
+              class="footer__icon_twitter"
+            ></a>
           </div>
 
           <div class="footer__bottom">© Bakerlab 2022</div>
         </div>
       </div>
     </footer>
-
     <script>
-      window.addEventListener('load', () => {
-        if (location.hash) {
-          history.replaceState(null, '', location.pathname);
-          window.scrollTo(0, 0);
-        }
+      document.querySelector('.icon--menu').addEventListener('click', () => {
+        document.body.classList.add('menu-open');
+      });
+
+      document.querySelector('.icon--close').addEventListener('click', () => {
+        document.body.classList.remove('menu-open');
       });
     </script>
   </body>
