--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,512 @@
+<!-- #region head -->
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative bakery</title>
+    <link
+      type="Image/x-icon"
+      href="images/logo-favicon.svg"
+      rel="icon"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <script
+      src="app.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <!-- #endregion -->
+  <body class="page__body page__body--theme--blue1">
+    <!-- #region header + aside -->
+    <header class="header">
+      <div class="top-bar">
+        <a
+          href="#"
+          class="top-bar__logo-link"
+        >
+          <img
+            src="./images/logo.svg"
+            alt="“Creative Bakery logo"
+            class="top-bar__logo"
+          />
+        </a>
+
+        <nav class="top-bar__nav nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#products"
+              >
+                Products
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#about-us"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="https://www.instagram.com/"
+                target="_blank"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="nav__item nav__item--phone">
+              <a
+                href="tel:629 555-0129"
+                class="icon nav__link--phone"
+              ></a>
+              <a
+                class="nav__link nav__link--upper"
+                href="tel:629 555-0129"
+              >
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="theme-switcher">
+          <span class="theme-toggle">
+            <div class="toggle-circle"></div>
+          </span>
+          <p class="theme-name">Pink theme</p>
+        </div>
+
+        <a
+          href="#menu"
+          class="icon top-bar__icon--menu"
+        ></a>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="top-bar menu__top">
+        <a
+          href="#"
+          class="top-bar__logo-link"
+        >
+          <img
+            src="./images/logo.svg"
+            alt="Creative Bakery logo"
+            class="top-bar__logo"
+          />
+        </a>
+        <a
+          href="#"
+          class="icon top-bar__icon--close"
+        ></a>
+      </div>
+      <div class="menu__content">
+        <nav class="nav menu__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#products"
+              >
+                Products
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#about-us"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="https://www.instagram.com/"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="nav__item nav__item--phone">
+              <a
+                href="tel:629 555-0129"
+                class="icon nav__link--phone"
+              ></a>
+              <a
+                class="nav__link nav__link--upper"
+                href="tel:629 555-0129"
+              >
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </aside>
+    <!-- #endregion -->
+    <main class="main">
+      <div class="main__content">
+        <section class="hero-block">
+          <p class="hero-block__text">
+            We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+          </p>
+          <div class="hero-block__title-wrapper">
+            <h1 class="hero-block__title">Creative bakery</h1>
+            <img
+              src="./images/cookie.png"
+              alt="Cookie"
+              class="hero-block__img"
+            />
+          </div>
+          <a
+            href="#about-us"
+            class="hero-block__button hero-block__button--theme-blue"
+          >
+            <span class="icon hero-block__button__icon"></span>
+            <span class="hero-block__link">Learn more</span>
+          </a>
+        </section>
+
+        <section class="hero-block--on-desktop">
+          <div
+            class="hero-block__title-wrapper hero-block__title-wrapper--on-desktop"
+          >
+            <h1 class="hero-block__title hero-block__title--on-desktop">
+              Creative bakery
+            </h1>
+            <p class="hero-block__text hero-block__text--on-desktop">
+              We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+            </p>
+            <a
+              href="#about-us"
+              class="hero-block__button hero-block__button--on-desktop hero-block__button--on-desktop--theme-blue"
+            >
+              <span class="icon hero-block__button__icon"></span>
+              <span class="hero-block__link">Learn more</span>
+            </a>
+          </div>
+          <img
+            src="./images/cookie.png"
+            alt="Cookie"
+            class="hero-block__img hero-block__img--on-desktop"
+          />
+        </section>
+        <section
+          class="products"
+          id="products"
+        >
+          <div class="products__info">
+            <h2 class="products__info__title">What we bake</h2>
+            <p class="products__info__text">
+              We can customize our cookies right for your needs. Just imagine it
+            </p>
+          </div>
+          <article class="product__card">
+            <img
+              src="images/products-cards/photo-product-01.png"
+              alt="Cakes"
+              class="product__card__img"
+            />
+            <div class="product__card__content">
+              <span class="product__card__content__bakery">Cakes</span>
+              <p class="product__card__content__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+            </div>
+            <div class="product__card__button">
+              <a
+                href="#contact"
+                class="product__card__button"
+              >
+                <span class="product__card__button__icon icon"></span>
+                <span class="product__card__button__text">Order</span>
+              </a>
+            </div>
+          </article>
+          <article class="product__card">
+            <img
+              src="images/products-cards/photo-product-02.png"
+              alt="Cakes"
+              class="product__card__img"
+            />
+            <div class="product__card__content">
+              <span class="product__card__content__bakery">Cakes</span>
+              <p class="product__card__content__description">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+            </div>
+            <div class="product__card__button">
+              <a
+                href="#contact"
+                class="product__card__button"
+              >
+                <span class="product__card__button__icon icon"></span>
+                <span class="product__card__button__text">Order</span>
+              </a>
+            </div>
+          </article>
+          <article class="product__card">
+            <img
+              src="images/products-cards/photo-product-03.png"
+              alt="Cakes"
+              class="product__card__img"
+            />
+            <div class="product__card__content">
+              <span class="product__card__content__bakery">Donuts</span>
+              <p class="product__card__content__description">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+            </div>
+            <div class="product__card__button">
+              <a
+                href="#contact"
+                class="product__card__button"
+              >
+                <span class="product__card__button__icon icon"></span>
+                <span class="product__card__button__text">Order</span>
+              </a>
+            </div>
+          </article>
+          <article class="product__card">
+            <img
+              src="images/products-cards/photo-product-04.png"
+              alt="Cakes"
+              class="product__card__img"
+            />
+            <div class="product__card__content">
+              <span class="product__card__content__bakery">Donuts</span>
+              <p class="product__card__content__description">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+            </div>
+            <div class="product__card__button">
+              <a
+                href="#contact"
+                class="product__card__button"
+              >
+                <span class="product__card__button__icon icon"></span>
+                <span class="product__card__button__text">Order</span>
+              </a>
+            </div>
+          </article>
+          <article class="product__card">
+            <img
+              src="images/products-cards/photo-product-05.png"
+              alt="Cakes"
+              class="product__card__img"
+            />
+            <div class="product__card__content">
+              <span class="product__card__content__bakery">Cakes</span>
+              <p class="product__card__content__description">
+                Chocolate salted caramel, Vanilla frutti pebbles
+              </p>
+            </div>
+            <div class="product__card__button">
+              <a
+                href="#contact"
+                class="product__card__button"
+              >
+                <span class="product__card__button__icon icon"></span>
+                <span class="product__card__button__text">Order</span>
+              </a>
+            </div>
+          </article>
+          <article class="product__card">
+            <img
+              src="images/products-cards/photo-product-06.png"
+              alt="Cakes"
+              class="product__card__img"
+            />
+            <div class="product__card__content">
+              <span class="product__card__content__bakery">Cookies</span>
+              <p class="product__card__content__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+            </div>
+            <div class="product__card__button">
+              <a
+                href="#contact"
+                class="product__card__button"
+              >
+                <span class="product__card__button__icon icon"></span>
+                <span class="product__card__button__text">Order</span>
+              </a>
+            </div>
+          </article>
+        </section>
+        <section
+          class="about-us"
+          id="about-us"
+        >
+          <div class="about-us__about">
+            <h2 class="about-us__about__title">Few words About us</h2>
+            <p class="about-us__about__description">
+              Like many design teams, Onfido made the transition from Abstract +
+              Sketch, to Figma in the last couple of years. One of the common
+              resistance points internally before making that switch, was
+              Figma’s lack of Git-style branching that Abstract enabled. The
+              design team had come to rely on branching and had built a lot of
+              our processes around it.
+            </p>
+          </div>
+          <ul class="about-us__list">
+            <div class="about-us__cell">
+              <li class="about-us__item">2015</li>
+              <span class="about-us__descriptions">Foundation year</span>
+            </div>
+            <div class="about-us__cell">
+              <li class="about-us__item">23</li>
+              <span class="about-us__descriptions">Stores</span>
+            </div>
+            <div class="about-us__cell">
+              <li class="about-us__item">155</li>
+              <span class="about-us__descriptions">Companies</span>
+            </div>
+            <div class="about-us__cell">
+              <li class="about-us__item">10k+</li>
+              <span class="about-us__descriptions">Clients</span>
+            </div>
+          </ul>
+        </section>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="footer__content">
+        <a
+          href="#"
+          class="footer__logo-link"
+        >
+          <img
+            src="./images/logo-footer.svg"
+            alt="Creative Bakery logo"
+            class="footer__logo"
+          />
+        </a>
+        <ul class="footer__menu__list footer__list">
+          <li class="footer__menu__item footer--subtitle">Menu</li>
+          <li class="footer__menu__item">
+            <a
+              class="footer__menu__link"
+              href="#products"
+            >
+              Products
+            </a>
+          </li>
+          <li class="footer__menu__item">
+            <a
+              class="footer__menu__link"
+              href="#about-us"
+            >
+              About Us
+            </a>
+          </li>
+          <li class="footer__menu__item">
+            <a
+              class="footer__menu__link"
+              href="https://www.instagram.com/"
+            >
+              Blog
+            </a>
+          </li>
+          <li class="footer__menu__item">
+            <a
+              class="footer__menu__link"
+              href="https://en.wikipedia.org/wiki/Privacy_policy"
+            >
+              Terms & Privacy
+            </a>
+          </li>
+        </ul>
+        <h2 class="footer__contact-us__title">Contact us</h2>
+        <ul
+          class="footer__contact-us__list footer__list"
+          id="contact"
+        >
+          <li class="footer__contact-us__item">Call us</li>
+          <li class="footer__contact-us__item">
+            <a
+              href="tel:629 555-0129"
+              class="footer__contact-us__link"
+            >
+              (629) 555-0129
+            </a>
+          </li>
+          <li class="footer__contact-us__item">
+            <a
+              href="tel:603 555-0123"
+              class="footer__contact-us__link"
+            >
+              (603) 555-0123
+            </a>
+          </li>
+          <li class="footer__contact-us__item">
+            <a
+              href="tel:704 555-0127"
+              class="footer__contact-us__link"
+            >
+              (704) 555-0127
+            </a>
+          </li>
+        </ul>
+        <ul
+          class="footer__contact-us__list footer__contact-us__list--email footer__list"
+        >
+          <li class="footer__contact-us__item">Email us</li>
+          <li class="footer__contact-us__item">
+            <a
+              href="mailto:bakerlab@example.com"
+              class="footer__contact-us__link"
+            >
+              bakerlab@example.com
+            </a>
+          </li>
+        </ul>
+        <ul class="footer__social__list">
+          <li class="footer__social__item">
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="footer__social__link footer__social__link--facebook"
+            ></a>
+          </li>
+          <li class="footer__social__item">
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="footer__social__link footer__social__link--instagram"
+            ></a>
+          </li>
+          <li class="footer__social__item">
+            <a
+              href="https://x.com/"
+              target="_blank"
+              class="footer__social__link footer__social__link--twitter"
+            ></a>
+          </li>
+        </ul>
+        <span class="footer__rights">© Bakerlab 2022</span>
+      </div>
+    </footer>
   </body>
 </html>
